@@ -1,3 +1,8 @@
+2008-01-30  Luis Machado  <luisgpm@br.ibm.com>
+
+	* gdb.arch/powerpc-d128-regs.exp: New testcase expect file.
+	* gdb.arch/powerpc-d128-regs.c: New testcase source file.
+
 2008-01-30  Paul Hilfinger  <hilfinger@adacore.com>
 
 	* gdb.ada/formatted_ref: New test program.
